--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.539.0",
     "match-sorter": "^8.1.0",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.1.11"
